--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: yoshi389111/github-profile-3d-contrib@latest
         env:
-          GITHUB_TOKEN: ${{ secrets.NEELX }}
+          GITHUB_TOKEN: ${{ secrets.MY_CUSTOM_TOKEN }}
           USERNAME: ${{ github.Neelx }}
       - name: Commit & Push
         run: |
